# kiss_ai

./: API.md  CLAUDE-PROMPT.md  README.md  install.sh  pyproject.toml
scripts/: release.sh  test_fresh_lib_install.sh  test_fresh_repo_install.sh
src/kiss/agents/assistant/: assistant.py  assistant_agent.py  chatbot_ui.py  code_server.py  config.py  prompt_detector.py  relentless_agent.py  task_history.py
src/kiss/agents/coding_agents/: BLOG.md  __init__.py  agent_optimizer.py  repo_agent.py  repo_optimizer.py
src/kiss/agents/create_and_optimize_agent/: README.md  improver_agent.py
src/kiss/agents/gepa/: README.md
src/kiss/agents/self_evolving_multi_agent/: README.md
src/kiss/agents/sorcar/: __init__.py  assistant_agent.py  browser_ui.py  chatbot_ui.py  code_server.py  config.py  sorcar.py  sorcar_agent.py  useful_tools.py  web_use_tool.py
src/kiss/agents/sorkar/: __init__.py  assistant_agent.py  chatbot_ui.py  code_server.py  sorkar.py  useful_tools.py  web_use_tool.py
src/kiss/core/: base.py  config.py  kiss_agent.py  relentless_agent.py
src/kiss/core/models/: __init__.py  anthropic_model.py  gemini_model.py  model.py  openai_compatible_model.py
src/kiss/scripts/: check.py  generate_api_docs.py
src/kiss/tests/: integration_test_assistant_agent.py  integration_test_gmail_login.py  integration_test_google_search.py  integration_test_web_use_tool.py  test_assistant_multi_session.py  test_assistant_redundancies.py  test_bash_stream_flush.py  test_chatbot_tasks.py  test_chatbot_ui.py  test_chatbot_ui_spinner.py  test_code_server_integration.py  test_code_server_keybinding.py  test_commit_push.py  test_core_branch_coverage.py  test_current_editor_file.py  test_file_usage.py  test_gepa_progress_callback.py  test_magic_config_button.py  test_merge_view_second_change.py  test_model_base_class.py  test_multimodal.py  test_print_to_browser.py  test_run_prompt_button.py  test_scan_files_order.py  test_scm_commit_message.py  test_set_prompt_curly_braces.py  test_sorcar_coverage.py  test_system_prompt.py  test_tool_exception_handling.py  test_useful_tools.py  test_vscode_panel.py  test_web_use_tool.py
